# DistributedMalloc

./: .gitignore  CMakeLists.txt  DEMO.md  README.md  hostfile  run.sh  simplegraph.dot  utests.sh
demo/: HarryPotterWiki  loi1901
doc/: node_leader.dot  node_process.dot  node_start.dot  user_commands.dot
include/: block.h  cli.h  command_queue.h  communication.h  debug.h  globals.h  graph.h  leader.h  leader_election.h  message.h  node.h  pending_messages.h  queue.h  utils.h
src/: cli.c  main.c  utils.c
src/cli/: cli.c  user.c
src/graph/: graph.c  map.c
src/main/: main.c  main_election_with_failures.c
src/network/: block.c  communication.c  data_communication.c  leader.c  leader_election.c  leader_utils.c  message.c  node.c
src/utils/: command_queue.c  debug.c  pending_messages.c  queue.c  utils.c
test/: main_test.c
